--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html>
-<h1> align=<"center">hello syam</h1>
-<?php
+<h1> align=<"center">hello syam</h1>;
 echo "hello world";
-?>
 </html>
